# grawitas

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  UNIX_DEPLOYMENT_INSTRUCTIONS.md  binary_wrapper_dummy.txt  package_binaries_unix.sh  qt_suppressions.supp
src/: CMakeLists.txt  README.md  grawitas.pro  main_revisionHistoryParser.cpp  main_spiritTest.cpp  main_talkPageParser.cpp
src/cli/: crawler_task.cpp  crawler_task.h  grawitas_cli_core.pro  grawitas_cli_crawler.pro  grawitas_cli_xml.pro  main_coreParser.cpp  main_crawlerParser.cpp  main_dbExport.cpp  main_networkTest.cpp  main_xmlDumpParser.cpp  main_xmlToDb.cpp  task.cpp  task.h
src/core/: CMakeLists.txt  grawitas_core.pro  main_tryout.cpp
src/core/graphComputation/: graphComputationCache.cpp  graphComputationCache.h
src/core/helpers/: stepTimer.cpp  stepTimer.h
src/core/models/: comment.cpp  comment.h  graph.h
src/core/output/: dateOutput.cpp  graphGmlOutput.cpp  graphGraphmlOutput.h  listHumanReadableOutput.h  listJsonOutput.cpp  outputHelpers.h  outputWrapper.cpp  outputWrapper.h
src/core/parsing/: coreTalkPageParsing.cpp  coreTalkPageParsing.h  xmlDumpParserWrapper.cpp  xmlDumpParserWrapper.h  xmlDumpParsingHandler.cpp  xmlDumpParsingHandler.h
src/core/parsing/grammars/: commentEndingGrammar.cpp  commentEndingGrammar.hpp  commentEndingGrammar_def.hpp  commentGrammar_def.hpp  dateGrammar.cpp  dateGrammar_def.hpp  sectionGrammar.cpp  sectionGrammar.hpp  sectionGrammar_def.hpp  signatureGrammar.cpp  signatureGrammar_def.hpp  talkPageGrammar.cpp  talkPageGrammar_def.hpp  userGrammar.cpp  userGrammar_def.hpp
src/core/tests/: fileListDataset.hpp  main_tests.cpp
src/core/tests/grammars/: dateGrammarTests.cpp  (+3 more)
src/cpp/: CMakeLists.txt  main_coreParser.cpp  main_xmlDumpParser.cpp
src/cpp/graphComputation/: graphComputationCache.cpp
src/cpp/models/: parsedTalkPage.cpp  parsedTalkPage.h
src/cpp/output/: dateOutput.h  formats.cpp  formats.h  graphGmlOutput.h  graphGraphmlOutput.cpp  graphGraphvizOutput.cpp  graphGraphvizOutput.h  listCsvOutput.cpp  listCsvOutput.h  listHumanReadableOutput.cpp  listJsonOutput.cpp  listJsonOutput.h  outputWrapper.cpp  outputWrapper.h
src/cpp/parsing/: coreTalkPageParsing.cpp  coreTalkPageParsing.h  xmlDumpParserWrapper.cpp  xmlDumpParserWrapper.h  xmlDumpParsingHandler.cpp  xmlDumpParsingHandler.h
src/cpp/tests/: commentListTests.cpp  helpers.cpp  helpers.h  jsonToCommentList.h  main_tests.cpp  optimalTextMapping.cpp  optimalTextMappingTests.cpp  readExcelCsv.cpp  testIoTests.cpp
src/crawler/: crawlerThread.cpp  crawlerThread.h  crawling.cpp  crawling.h  grawitas_crawler.pro  models.h  parsedTalkPageArchiver.cpp  parsedTalkPageArchiver.h  requestRawPagesFromWikipedia.cpp  requestRawPagesFromWikipedia.h  talkpageFetcher.cpp  talkpageFetcher.h
src/graphComputation/: graphComputationCache.cpp  graphComputationCache.h
src/gui/: grawitas_gui.pro
src/gui/cpp/: coreWrapper.cpp  coreWrapper.h  crawlerWrapper.cpp  crawlerWrapper.h  dumpParserThread.cpp  dumpParserThread.h  grawitasWrapper.cpp  grawitasWrapper.h  main.cpp  main_coreParserDemo.cpp  main_crawler.cpp
src/gui/qml/: CoreComponentForm.qml  CrawlerComponent.qml  XmlDumpComponent.qml  coreParserDemo.qrc  crawler.qrc  main_coreParserDemo.qml  main_crawler.qml  qml.qrc  trim.js
src/httpCrawler/: crawling.cpp  crawling.h  getPagesFromWikipedia.cpp  getPagesFromWikipedia.h
src/misc/: cliProgressBar.hpp  readLinesFromFile.cpp  readLinesFromFile.h  splitByDate.cpp  splitByDate.h
src/models/: comment.cpp  comment.h  graph.h  parsedTalkPage.cpp  parsedTalkPage.h
src/networks/: graph.h  graphComputationCache.cpp  graphComputationCache.h
src/output/: commentSummary.cpp  commentSummary.h  dateOutput.cpp  dateOutput.h  formats.cpp  graphGmlOutput.cpp  graphGmlOutput.h  graphGraphmlOutput.cpp  graphGraphmlOutput.h  graphGraphvizOutput.cpp  graphGraphvizOutput.h  listCsvOutput.cpp  listCsvOutput.h  listHumanReadableOutput.cpp  listHumanReadableOutput.h  listJsonOutput.cpp  listJsonOutput.h  outputHelpers.cpp  outputWrapper.cpp  outputWrapper.h  stepTimer.cpp  stepTimer.h
src/parsers/: cleaningSyntax.cpp  cleaningSyntax.h  commentParser.cpp  commentParser.h  regexCombinatoricalParser.cpp  regexCombinatoricalParser.h  talkPageParser.cpp  talkPageParser.h  talkPageParsing.cpp  talkPageParsing.h
src/parsers/grammars/: commentEndingGrammar.cpp  commentEndingGrammar.hpp  commentEndingGrammar_def.hpp  commentGrammar.cpp  commentGrammar.hpp  commentGrammar_def.hpp  dateGrammar.cpp  dateGrammar.hpp  dateGrammar_def.hpp  sectionGrammar.cpp  sectionGrammar.hpp  sectionGrammar_def.hpp  signatureGrammar.cpp  signatureGrammar.hpp  signatureGrammar_def.hpp  talkPageGrammar.cpp  talkPageGrammar.hpp  talkPageGrammar_def.hpp  userGrammar.cpp  userGrammar.hpp  userGrammar_def.hpp
src/qt_gui/: CoreComponentForm.qml  CrawlerComponent.qml  MainForm.qml  XmlDumpComponent.qml  crawlerThread.cpp  dumpParserThread.cpp  first_test.pro  grawitas.pro  grawitasWrapper.cpp  grawitasWrapper.h  main.cpp  main.qml  parsedTalkPageArchiver.cpp  parsedTalkPageArchiver.h  qml.qrc  talkpageFetcher.cpp  talkpageFetcher.h
src/talkPageParser/: date.cpp  date.h  models.h  parsing.cpp  parsing.h
src/talkPageParser/grammars/: commentEndingGrammar.hpp  commentGrammar.cpp  commentGrammar.hpp  dateGrammar.hpp  signatureGrammar.hpp  talkPageGrammar.cpp  talkPageGrammar_def.hpp  userGrammar.hpp
src/tests/: fileListDataset.hpp  helpers.h  jsonToCommentList.cpp  main_tests.cpp  optimalTextMapping.h
src/tests/grammars/: commentGrammarTests.cpp  dateGrammarTests.cpp  sectionGrammarTests.cpp  signatureGrammarTests.cpp  talkPageGrammarTests.cpp  talkPageGrammarTests2.cpp  userGrammarTests.cpp
src/xmlDumpCrawler/: xmlDumpParsing.cpp  xmlDumpParsingHandler.cpp  xmlDumpParsingHandler.h  xmlToSqliteHandler.cpp  xmlToSqliteHandler.h
src/xmlToSql/: getArticlesFromDb.cpp  getArticlesFromDb.h  getFilteredCommentsFromDb.cpp  getFilteredCommentsFromDb.h  getIdsFromDb.cpp  getIdsFromDb.h  getUsersFromDb.cpp  getUsersFromDb.h  xmlToSqliteHandler.cpp
(+59 files in other folders)
